--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2275,15 +2275,8 @@ I {
 
     .social_menu_btn {
         background: var(--NVC_T);
-        overflow: hidden;
-        width: var(--iconD);
-        height: var(--iconD);
         border-radius: 1rem;
-        .icon_container {
-            width: 100%;
-            height: 100%;
-            padding: 1rem;
-        }
+
         &:hover .icon_container {
             background: var(--FC);
             .cls-2,
@@ -2388,10 +2381,10 @@ I {
     height: 3rem;
 }
 .nav_big {
-    height: 8rem;
+    height: var(--NVH);
 }
 .nav_small {
-    height: 6rem;
+    height: var(--NVH_F);
 }
 .good {
     background: var(--bgGood);
