--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -74,7 +74,7 @@
     --XL: 2rem;
 
     --FS_XS: 0.8rem;
-    --FS_S: 1rem;
+    --FS_S: var(--LG);
     --FS_N: 1.4rem;
     --FS_L: 1.8rem;
     --FS_X: 4rem;
@@ -126,7 +126,7 @@
 }
 @keyframes bounceDown {
     50% {
-        transform: translateY(1rem);
+        transform: translateY(var(--LG));
     }
 }
 @keyframes bounceUp {
@@ -310,7 +310,7 @@ TEXTAREA {
     background: var(--bgC);
     color: var(--TC);
     font-size: var(--FS_S);
-    padding: 1rem 0.5rem;
+    padding: var(--LG) var(--MD);
 }
 TEXTAREA {
     resize: none;
@@ -361,7 +361,7 @@ I {
     font-weight: 400;
 }
 .title_subsection {
-    margin-bottom: 1rem;
+    margin-bottom: var(--LG);
 }
 //^ CLIENTS LOGO COLORS
 .accent_text {
@@ -1004,7 +1004,7 @@ I {
     background: var(--FC);
     color: var(--TC_C);
     font-size: var(--FS_L);
-    padding: 1rem;
+    padding: var(--LG);
     transition: var(--T_F);
     translate: 0 -100%;
     z-index: 999;
@@ -1027,7 +1027,7 @@ I {
     flex-direction: column;
     position: absolute;
     background: var(--NVC);
-    border-radius: 0.5rem;
+    border-radius: var(--MD);
     z-index: 2;
     display: none;
     transition: var(--T_UF);
@@ -1043,8 +1043,8 @@ I {
     }
     .info {
         @include flex(column, center, flex-start);
-        gap: 0.25rem;
-        padding: 1rem;
+        gap: var(--SM);
+        padding: var(--LG);
         SPAN {
             display: block;
             text-align: left;
@@ -1062,7 +1062,7 @@ I {
     }
     .photo {
         position: absolute;
-        top: 2rem;
+        top: var(--XL);
         left: 50%;
         transform: translateX(-50%);
         width: 6rem;
@@ -1093,7 +1093,7 @@ I {
     left: 0;
     overflow: hidden;
     .info {
-        margin-top: 1rem;
+        margin-top: var(--LG);
     }
 }
 .rex_bubble {
@@ -1107,10 +1107,10 @@ I {
     }
 }
 .info_bubble {
-    padding: 1rem;
-    gap: 0.5rem;
+    padding: var(--LG);
+    gap: var(--MD);
     .description {
-        line-height: 1.2rem;
+        line-height: 1var (--XL);
         text-align: center;
     }
 }
@@ -1122,10 +1122,11 @@ I {
     outline: solid 2px var(--FC);
     border-radius: var(--XL);
     text-align: center;
-    padding: 1rem 0.5rem;
+    padding: var(--LG) var(--MD);
     cursor: pointer;
-    transition: var(--T_UF);
+    transition: var(--T_F);
     .label_btn {
+        transition: var(--T_F);
         color: var(--TC);
         font-weight: var(--FW_B);
     }
@@ -1148,8 +1149,8 @@ I {
     color: var(--TC);
     margin-top: 4rem;
     .arrow_down_svg {
-        margin-top: 1rem;
-        width: 2rem;
+        margin-top: var(--LG);
+        width: var(--XL);
         animation: bounceDown 1s ease infinite;
         transition: var(--T_F);
     }
@@ -1215,7 +1216,6 @@ I {
     color: var(--TC);
     font-weight: var(--FW_B);
     font-size: var(--FS_N);
-    transition: var(--T_UF);
     &:hover {
         color: var(--whiteOff);
     }
@@ -1257,13 +1257,13 @@ I {
     left: 50%;
     transform: translateX(-50%);
     transition: var(--T_M);
-    border-radius: 0.25rem;
+    border-radius: var(--SM);
 }
 .top_bar {
-    top: 0.5rem;
+    top: var(--MD);
 }
 .bottom_bar {
-    bottom: 0.5rem;
+    bottom: var(--MD);
 }
 .center_bar {
     top: 50%;
@@ -1298,7 +1298,7 @@ I {
 }
 .logo_btn {
     @include flex(row, flex-start, center);
-    padding: 0 0.5rem;
+    padding: 0 var(--MD);
     width: fit-content;
     scale: 1;
     transition: var(--T_SCALE), height 500ms ease;
@@ -1347,9 +1347,9 @@ I {
 .bullet {
     background: var(--bgC_T);
     width: calc(100% - var(--iconD));
-    padding: 2rem;
+    padding: var(--XL);
     H1 {
-        margin-bottom: 1rem;
+        margin-bottom: var(--LG);
     }
 }
 .flex {
@@ -1357,10 +1357,10 @@ I {
 }
 .flex_responsive {
     @include flex(column, flex-start, center);
-    gap: 2rem;
+    gap: var(--XL);
 }
 .subtitle_section {
-    margin: 2rem 0 1rem;
+    margin: var(--XL) 0 var(--LG);
     font-size: var(--FS_L);
 }
 .title_section {
@@ -1402,12 +1402,12 @@ I {
     }
     .info_container {
         color: var(--TC);
-        padding: 1rem 1.5rem 2rem;
+        padding: var(--LG) 1.5rem var(--XL);
         transition: var(--T_S);
         P,
         H3,
         H4 {
-            margin: 0.5rem 0;
+            margin: var(--MD) 0;
         }
     }
 }
@@ -1427,10 +1427,10 @@ I {
             font-size: var(--fontSizeMClamp);
             transition: var(--T_M);
             opacity: 0.9;
-            padding: 2rem 0;
+            padding: var(--XL) 0;
         }
         P {
-            padding: 1rem 1.5rem;
+            padding: var(--LG) 1.5rem;
             transition: var(--T_M);
             opacity: 0;
             transform: translateY(100%);
@@ -1467,7 +1467,7 @@ I {
     width: 100%;
     height: 20rem;
     overflow: hidden;
-    border-radius: 0.25rem;
+    border-radius: var(--SM);
     .img_card {
         position: absolute;
         top: 0;
@@ -1522,7 +1522,7 @@ I {
             }
         }
         .margin_bottom {
-            margin-bottom: 1rem;
+            margin-bottom: var(--LG);
         }
     }
     &:hover .info_project_container,
@@ -1541,12 +1541,12 @@ I {
 }
 .btns_container {
     @include flexCenter();
-    padding-top: 1rem;
+    padding-top: var(--LG);
 }
 .input_container {
     width: 100%;
     height: fit-content;
-    margin-bottom: 1rem;
+    margin-bottom: var(--LG);
 }
 .cards_container {
     position: relative;
@@ -1566,7 +1566,7 @@ I {
     grid-template-columns: repeat(auto-fit, minmax(150px, 8fr));
     gap: 0;
     min-height: auto;
-    padding: 2rem 0;
+    padding: var(--XL) 0;
     .service_card {
         grid-column: span 2;
     }
@@ -1575,8 +1575,8 @@ I {
     width: 100%;
     @include flex(row, space-between, center);
     border-bottom: solid 2px var(--FC);
-    padding: 2rem 0 1rem;
-    margin-bottom: 1rem;
+    padding: var(--XL) 0 var(--LG);
+    margin-bottom: var(--LG);
     .subtitle_section {
         margin: 0;
     }
@@ -1589,7 +1589,7 @@ I {
 
 .cards_portfolio_container {
     overflow-y: auto;
-    padding-top: 0.5rem;
+    padding-top: var(--MD);
 }
 .lists_container {
     @include flex(row, flex-start, flex-start);
@@ -1602,10 +1602,10 @@ I {
 .description_portfolio {
     @include flex(row, flex-start, center);
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: var(--LG);
     height: 5rem;
     width: fit-content;
-    padding: 1rem;
+    padding: var(--LG);
     SPAN {
         display: block;
         font-size: var(--fontSizeMClamp);
@@ -1622,9 +1622,9 @@ I {
         width: 100%;
         background: var(--bgM);
         border: none;
-        border-radius: 0.25rem;
+        border-radius: var(--SM);
         text-transform: uppercase;
-        padding: 0.5rem 3rem;
+        padding: var(--MD) 3rem;
         .label_btn {
             color: var(--TC);
             pointer-events: none;
@@ -1650,12 +1650,12 @@ I {
     .search_list_btn {
         text-transform: uppercase;
         @include flexCenter();
-        gap: 0.5rem;
+        gap: var(--MD);
         background: var(--bgM);
         border-radius: 0;
         border-bottom: solid 2px var(--FC);
         min-height: fit-content;
-        padding: 0.5rem 1rem;
+        padding: var(--MD) var(--LG);
         .label_btn {
             color: var(--TC);
             pointer-events: none;
@@ -1663,8 +1663,8 @@ I {
         }
         .icon_container {
             @include flexCenter();
-            height: 2rem;
-            width: 2rem;
+            height: var(--XL);
+            width: var(--XL);
             padding: 0;
         }
     }
@@ -1713,11 +1713,11 @@ I {
     transform: translate(-50%, -50%);
     height: auto;
     transition: var(--T_F);
-    padding: 1rem;
+    padding: var(--LG);
     border-style: solid;
     border-width: 2px;
     border-color: transparent;
-    border-radius: 0.5rem;
+    border-radius: var(--MD);
     display: none;
     opacity: 0;
     justify-content: center;
@@ -1730,8 +1730,8 @@ I {
 }
 .contact_form {
     background: var(--NVC);
-    padding: 2rem;
-    border-radius: 1rem;
+    padding: var(--XL);
+    border-radius: var(--LG);
     .form_response_container {
         width: calc(100% - 6rem);
     }
@@ -1739,15 +1739,15 @@ I {
 .modal_window {
     position: absolute;
     @include flex(column, flex-start, flex-start);
-    top: 2rem;
+    top: var(--XL);
     left: 50%;
     width: 90%;
     max-width: 720px;
     height: fit-content;
     transition: var(--T_M);
     transform: translate(-50%, -50%);
-    border-radius: 1rem;
-    padding: 2rem 0 0;
+    border-radius: var(--LG);
+    padding: var(--XL) 0 0;
     max-height: calc(100svh - 4rem);
     overflow: hidden;
     display: none;
@@ -1770,10 +1770,10 @@ I {
     .modal_info {
         width: 100%;
         height: fit-content;
-        margin-bottom: 1rem;
+        margin-bottom: var(--LG);
     }
     .modal_header {
-        padding: 1rem 0;
+        padding: var(--LG) 0;
         width: 100%;
     }
     .portfolio_modal {
@@ -1785,8 +1785,8 @@ I {
     .alert_modal,
     .legal_modal {
         .btn {
-            width: calc(100% - 1rem);
-            margin: 1rem 0.5rem;
+            width: calc(100% - var(--LG));
+            margin: var(--LG) VAR(--MD);
         }
     }
     .alert_modal {
@@ -1798,9 +1798,9 @@ I {
         .modal_info {
             overflow: auto;
             scroll-behavior: smooth;
-            padding-right: 1rem;
+            padding-right: var(--LG);
             border-top: solid var(--FC) 4px;
-            padding: 1rem 1rem 0 0;
+            padding: var(--LG) var(--LG) 0 0;
             .inner_link_btn {
                 width: 100%;
             }
@@ -1816,7 +1816,7 @@ I {
         }
     }
     .submit_container {
-        padding: 0.5rem;
+        padding: var(--MD);
     }
 }
 .inner_link_btn {
@@ -1829,7 +1829,7 @@ I {
 .icons_container {
     flex-wrap: wrap;
     @include flex(row, center, flex-start);
-    gap: 1rem;
+    gap: var(--LG);
 }
 .section_divider {
     width: 100%;
@@ -1854,11 +1854,11 @@ I {
         }
         .quote_start {
             align-self: flex-start;
-            transform: translateY(-2rem);
+            transform: translateY(-var(--XL));
         }
 
         .quote_end {
-            transform: translateY(2rem);
+            transform: translateY(var(--XL));
             align-self: flex-end;
         }
         .icon_container {
@@ -1866,14 +1866,14 @@ I {
         }
     }
     .author_container {
-        margin-top: 2rem;
+        margin-top: var(--XL);
         @include flex(column, flex-end, flex-end);
         SPAN {
             display: block;
             text-align: right;
         }
         .author {
-            margin-bottom: 0.5rem;
+            margin-bottom: var(--MD);
             i {
                 font-size: var(--fontSizeMClamp);
                 color: var(--SC);
@@ -1949,7 +1949,7 @@ I {
             color: var(--TC);
             font-size: var(--fontSizeMClamp);
             text-align: right;
-            margin-top: 1rem;
+            margin-top: var(--LG);
         }
         H1 {
             color: var(--TC);
@@ -2005,7 +2005,7 @@ I {
             color: var(--FC);
         }
         .swipe_animation_container_half {
-            padding: 0 2rem;
+            padding: 0 var(--XL);
         }
         .about_text {
             font-size: var(--fontSizeMClamp);
@@ -2015,9 +2015,9 @@ I {
 }
 .badge {
     @include flex(column, flex-start, center);
-    gap: 0.5rem;
+    gap: var(--MD);
     color: var(--TC_C);
-    padding: 1rem;
+    padding: var(--LG);
     .badge_name {
         color: var(--TC);
         font-size: var(--FS_N);
@@ -2035,9 +2035,9 @@ I {
     height: 350px;
     justify-content: space-between;
     background: var(--bgC_T);
-    border-radius: 0.5rem;
+    border-radius: var(--MD);
     .badge_name {
-        margin-top: 0.5rem;
+        margin-top: var(--MD);
     }
 }
 .skills_section {
@@ -2095,7 +2095,7 @@ I {
     .icon_container {
         width: 3rem;
         height: 3rem;
-        padding: 0.25rem;
+        padding: var(--SM);
     }
     .link_text {
         font-size: var(--FS_XS);
@@ -2111,7 +2111,7 @@ I {
     .made_content {
         margin-left: 3rem;
         .btns_container :not(:first-child) {
-            margin-left: 2rem;
+            margin-left: var(--XL);
         }
         .label_btn {
             font-size: var(--FS_S);
@@ -2186,7 +2186,7 @@ I {
     }
 
     .nav_btn {
-        padding: 0 1rem;
+        padding: 0 var(--LG);
     }
 
     .theme_btn {
@@ -2206,7 +2206,7 @@ I {
     left: 0;
     right: 0;
     top: 0;
-    border-radius: 0.5rem 0.5rem 0 0;
+    border-radius: var(--MD) var(--MD) 0 0;
     @include flexCenter();
     flex-direction: column;
 
@@ -2258,7 +2258,7 @@ I {
     flex-direction: column;
     position: fixed;
     bottom: 4rem;
-    left: 2rem;
+    left: var(--XL);
     min-height: var(--iconD);
     z-index: 4;
     fill: var(--FC);
@@ -2267,14 +2267,14 @@ I {
         height: auto;
         transition: var(--T_F);
         margin: 1.5rem 0;
-        gap: 1rem;
+        gap: var(--LG);
         background: var(--NVC_T);
-        border-radius: 1rem;
+        border-radius: var(--LG);
     }
 
     .social_menu_btn {
         background: var(--NVC_T);
-        border-radius: 1rem;
+        border-radius: var(--LG);
 
         &:hover .icon_container {
             background: var(--FC);
