--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2292,13 +2292,11 @@ I {
   min-height: var(--iconD);
   z-index: 4;
   fill: var(--FC);
-  /* overflow: hidden; */
 }
 .menu_social_container .menu_social_btns_container {
   height: auto;
   transition: var(--T_F);
-  margin: 1.5rem 0;
-  gap: var(--LG);
+  margin: var(--XL) 0;
   background: var(--NVC_T);
   border-radius: var(--LG);
 }
