--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2296,7 +2296,7 @@ I {
 .menu_social_container .menu_social_btns_container {
   height: auto;
   transition: var(--T_F);
-  margin: var(--XL) 0;
+  margin: var(--LG) 0;
   background: var(--NVC_T);
   border-radius: var(--LG);
 }
