--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2265,7 +2265,7 @@ I {
     .menu_social_btns_container {
         height: auto;
         transition: var(--T_F);
-        margin: var(--XL) 0;
+        margin: var(--LG) 0;
         background: var(--NVC_T);
         border-radius: var(--LG);
     }
