--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2269,6 +2269,9 @@ I {
         background: var(--NVC_T);
         border-radius: var(--LG);
     }
+    .menu_btn_social_menu {
+        background: var(--NVC_T);
+    }
 
     .social_menu_btn {
         border-radius: var(--LG);
