logo animation overflow visible and meta tags for social

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1297,6 +1297,7 @@ I {
     }
 }
 .logo_btn {
+    overflow: visible;
     @include flex(row, flex-start, center);
     padding: 0 var(--MD);
     width: fit-content;
