fixed certification badge image height

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2042,6 +2042,9 @@ I {
 .certification_badge .badge_name {
   margin-top: var(--MD);
 }
+.certification_badge .badge_image {
+  height: auto;
+}
 
 .skills_section {
   --skillIconD: 6rem;
