--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2037,6 +2037,9 @@ I {
     .badge_name {
         margin-top: var(--MD);
     }
+    .badge_image {
+        height: auto;
+    }
 }
 .skills_section {
     --skillIconD: 6rem;
