border-radius in logo remove

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -911,7 +911,6 @@ I {
   width: var(--iconD);
   height: var(--iconD);
   padding: var(--LG);
-  border-radius: var(--LG);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -919,6 +918,10 @@ I {
      -moz-user-select: none;
           user-select: none;
   fill: var(--FC);
+}
+
+.icon_container:not(.logo_btn) {
+  border-radius: var(--LG);
 }
 
 .bubble {
