--- a/src/css/style.css
+++ b/src/css/style.css
@@ -920,7 +920,8 @@ I {
   fill: var(--FC);
 }
 
-.icon_container:not(.logo_btn) {
+.icon_container:not(.logo_btn),
+.phone_social_btn {
   border-radius: var(--LG);
 }
 
@@ -1085,10 +1086,6 @@ I {
 }
 .close_btn:hover .close_icon_svg {
   rotate: 360deg;
-}
-
-.phone_social_btn {
-  border-radius: var(--MD);
 }
 
 .nav_btn:not(.phone_lang_btn) {
