--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1721,7 +1721,7 @@ I {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  top: var(--XL);
+  top: var(--SM);
   left: 50%;
   width: 90%;
   max-width: 720px;
@@ -1731,7 +1731,7 @@ I {
   transform: translate(-50%, -50%);
   border-radius: var(--LG);
   padding: var(--XL) 0 0;
-  max-height: calc(100svh - 4rem);
+  max-height: calc(100vh - var(--XL));
   overflow: hidden;
   display: none;
   opacity: 0;
