--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1438,6 +1438,8 @@ I {
             transition: var(--T_M);
             opacity: 0;
             transform: translateY(100%);
+            text-align: center;
+            inline-size: 90%;
         }
     }
 
