--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -341,10 +341,10 @@ H2 {
 H1 {
     color: var(--FC);
     font-weight: var(--FW_B);
-    font-size: var(--FS_L);
+    font-size: var(--fontSizeXClamp);
 }
 H2 {
-    font-size: var(--FS_N);
+    font-size: var(--fontSizeMClamp);
     font-weight: var(--FW_B);
     color: var(--TC);
 }
@@ -1365,7 +1365,6 @@ I {
 }
 .subtitle_section {
     margin: var(--XL) 0 var(--LG);
-    font-size: var(--FS_L);
 }
 .title_section {
     @include flexCenter();
@@ -1419,19 +1418,19 @@ I {
 .service_card {
     .info_card {
         transition: all 500ms ease-in-out;
-        @include flexCenter();
-        flex-direction: column;
+        @include flex(column, flex-start, center);
         background: var(--bgC_UT);
+        padding: var(--XL) 0;
         width: 100%;
         height: 100%;
         H2 {
             width: 100%;
             text-align: center;
             color: var(--TC);
-            font-size: var(--fontSizeMClamp);
+            font-size: var(--fontSizeXClamp);
             transition: var(--T_M);
             opacity: 0.9;
-            padding: var(--XL) 0;
+            transform: translateY(100%);
         }
         P {
             padding: var(--LG) 1.5rem;
@@ -1440,6 +1439,7 @@ I {
             transform: translateY(100%);
             text-align: center;
             inline-size: 90%;
+            font-size: var(--fontSizeMClamp);
         }
     }
 
@@ -1452,13 +1452,13 @@ I {
         }
         .info_card P,
         .info_card H2 {
-            opacity: 1;
             transform: translateY(0);
         }
+        .info_card P {
+            opacity: 1;
+        }
         .info_card H2 {
-            padding: 0;
-            background: transparent;
-            color: var(--TC);
+            color: var(--FC);
         }
     }
 }
@@ -1949,15 +1949,14 @@ I {
     .title_container {
         H2 {
             color: var(--TC);
-            font-size: var(--fontSizeMClamp);
-            text-align: right;
+            /* text-align: left; */
             margin-top: var(--LG);
         }
         H1 {
             color: var(--TC);
             font-size: var(--fontSizeXLClamp);
             line-height: 6rem;
-            text-align: right;
+            /* text-align: left; */
         }
     }
     .btns_container {
@@ -1998,7 +1997,7 @@ I {
             color: var(--FC);
         }
         .title_name {
-            font-size: var(--FS_XL);
+            font-size: var(--fontSizeXLClamp);
 
             color: var(--SC);
         }
