certifications container change by card_container, adding sound effects to btns, change certification width for new fit

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2034,17 +2034,20 @@ I {
 }
 
 .certification_badge {
-  max-width: 350px;
-  height: 350px;
   justify-content: space-between;
   background: var(--bgC_T);
   border-radius: var(--MD);
+  gap: var(--XL);
 }
 .certification_badge .badge_name {
   margin-top: var(--MD);
 }
 .certification_badge .badge_image {
   height: auto;
+}
+
+.certification_container {
+  gap: var(--LG);
 }
 
 .skills_section {
@@ -2451,7 +2454,7 @@ I {
   display: none;
 }
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 800px) {
   .flex_responsive {
     display: flex;
     justify-content: center;
@@ -2471,11 +2474,6 @@ I {
   .cards_service_container .service_card:nth-child(6) {
     grid-column: span 2;
   }
-}
-@media screen and (min-width: 917px) {
-  .flex_responsive {
-    flex-direction: row;
-  }
   .menu_btn {
     display: none;
   }
@@ -2489,16 +2487,21 @@ I {
     display: flex;
   }
 }
-/* @media screen and (min-width: 1185px) {
-
-} */
-@media screen and (min-width: 1342px) {
+@media screen and (min-width: 1000px) {
+  .flex_responsive {
+    flex-direction: row;
+  }
   .nav_btn .label_btn:not(.label_lang) {
     display: flex;
   }
   .nav_btn .icon_btn {
     display: none;
   }
+}
+/* @media screen and (min-width: 1185px) {
+
+} */
+@media screen and (min-width: 1342px) {
   .cards_service_container .service_card:nth-child(2),
   .cards_service_container .service_card:nth-child(3),
   .cards_service_container .service_card:nth-child(6) {
