--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -190,12 +190,8 @@
     color: var(--TC);
 
     //~ SECTION BACKGROUNDS--START
-    --backgroundHero: linear-gradient(transparent, var(--NVC)), url("../img/backgrounds/day.webp") center no-repeat fixed;
-    --bgHeaderSectionAbout: linear-gradient(var(--bgC), transparent, var(--bgC) 85%), url("../img/backgrounds/fondoBasketquot") center no-repeat fixed;
-    --bgHeaderSectionServices: linear-gradient(var(--bgC), transparent, var(--bgC) 85%), url("../img/backgrounds/office-932926_1920.jpg") center no-repeat fixed;
-    --bgHeaderSectionPortfolio: linear-gradient(var(--bgC), transparent, var(--bgC) 85%), url("../img/backgrounds/sunglasses-1284392_1920.jpg") center no-repeat fixed;
-    --bgHeaderSectionSkills: linear-gradient(var(--bgC), rgba(255, 255, 255, 0.5), var(--bgC)), url("../img/backgrounds/pexels-julia-m-cameron-4144097.jpg") center no-repeat fixed;
-    --bgHeaderSectionContact: linear-gradient(var(--bgC), rgba(255, 255, 255, 0.5), var(--bgC)), url("../img/backgrounds/contact_day.webp") center no-repeat fixed;
+    --backgroundHero: linear-gradient(transparent, var(--NVC));
+    --bgHeaderSectionContact: linear-gradient(var(--bgC), rgba(255, 255, 255, 0.5), var(--bgC));
 
     .leiru_icon_svg {
         .brand,
@@ -229,12 +225,8 @@
     //¿GENERALS
 
     //~SECTION BACKGROUNDS
-    --backgroundHero: linear-gradient(transparent, var(--NVC)), url("../img/backgrounds/night_EXIF.webp") center no-repeat fixed;
-    --bgHeaderSectionAbout: linear-gradient(var(--bgC) 10%, transparent, var(--bgC) 90%), url("../img/backgrounds/graffiti-background-1554703550MY5.jpg") center no-repeat fixed;
-    --bgHeaderSectionServices: linear-gradient(var(--bgC) 10%, transparent, var(--bgC) 90%), url("../img/backgrounds/pexels-ovan-57690.jpg") center no-repeat fixed;
-    --bgHeaderSectionPortfolio: linear-gradient(var(--bgC) 10%, transparent, var(--bgC) 90%), url("../img/backgrounds/workspace-1280538_1920.jpg") center no-repeat fixed;
-    --bgHeaderSectionSkills: linear-gradient(var(--bgC) 10%, rgba(0, 0, 0, 0.5), var(--bgC) 90%), url("../img/backgrounds/tools-1083796_1920.jpg") center no-repeat fixed;
-    --bgHeaderSectionContact: linear-gradient(var(--bgC) 10%, rgba(0, 0, 0, 0.5), var(--bgC) 90%), url("../img/backgrounds/contact_night.webp") center no-repeat fixed;
+    --backgroundHero: linear-gradient(transparent, var(--NVC));
+    --bgHeaderSectionContact: linear-gradient(var(--bgC) 10%, rgba(0, 0, 0, 0.5), var(--bgC) 90%);
 
     color: var(--TC);
 
@@ -1929,6 +1921,15 @@ I {
     justify-content: center;
     margin-bottom: 0;
 }
+.overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: inherit;
+    height: inherit;
+}
 .bg_section {
     position: absolute;
     top: 0;
@@ -1936,16 +1937,13 @@ I {
     height: 100%;
     width: 100%;
     max-width: 100%;
-    background-size: cover !important;
-    background-position: center !important;
+    object-position: center;
     z-index: -1;
 }
 .hero_section {
-    view-timeline: --scroll;
-    .bg_section {
+    .overlay {
         background: var(--backgroundHero);
     }
-
     .title_container {
         H2 {
             color: var(--TC);
@@ -2057,7 +2055,7 @@ I {
     position: relative;
 }
 .contact_section {
-    .bg_section {
+    .overlay {
         background: var(--bgHeaderSectionContact);
     }
     .form {
@@ -2400,8 +2398,11 @@ I {
     color: var(--blackOff);
     border-color: var(--danger);
 }
-[data-active="false"] {
+[hidden] {
     display: none;
+}
+[hidden="false"] {
+    display: flex;
 }
 @media screen and (min-width: 800px) {
     .flex_responsive {
